--- a/projects/web/src/app/common/attachment-upload/attachment-upload.component.html
+++ b/projects/web/src/app/common/attachment-upload/attachment-upload.component.html
@@ -5,11 +5,11 @@
     <nz-icon [class]="iconClass()" [nzType]="iconPath()" />
     {{buttonText()}}
   </button>
-  <input class="d-none" type="file" #fileInput [accept]="accept()"
+  <input class="hidden" type="file" #fileInput [accept]="accept()"
     [multiple]="multiple()" (change)="onFileChange($event)"
   />
 } @else {
-  <span class="text-warning">{{noPrivilegeText()}}</span>
+  <span class="text-yellow-500">{{noPrivilegeText()}}</span>
 }
 
 <nz-modal [nzTitle]="modalTitle()" [nzVisible]="uploading()" [nzClosable]="false"
