--- a/projects/web/src/app/common/json-data-list/json-data-list.component.html
+++ b/projects/web/src/app/common/json-data-list/json-data-list.component.html
@@ -1,6 +1,6 @@
 <nz-list [nzBordered]="listBordered()" [nzSize]="listSize()"
   [nzFooter]="listFooter()">
-  <nz-list-header class="d-flex">
+  <nz-list-header class="flex">
     {{listHeader()}}
     <button class="ms-auto px-1" type="button" nz-button nzSize="small"
       (click)="loadData()">
@@ -11,9 +11,9 @@
   @let showDel = user.privileges['app_json_data.delete'] && allowDelete();
   @let showUpdate = user.privileges['app_json_data.update'] && allowUpdate();
   @for (item of data(); track item.id) {
-    <nz-list-item class="d-flex flex-row">
+    <nz-list-item class="flex flex-row">
       <span>{{item.name}}
-        <i class="text-muted">(更新时间：{{item.updatedAt | date:'yyyy-MM-dd HH:mm:ss'}})</i>
+        <i class="text-gray-500">(更新时间：{{item.updatedAt | date:'yyyy-MM-dd HH:mm:ss'}})</i>
       </span>
       <nz-space-compact class="ms-auto" nzSize="small">
         @if (showUpdate) {
@@ -36,6 +36,6 @@
     </nz-list-item>
   }
 </nz-list>
-<input class="d-none" type="file" #fileInput [accept]="accept()"
+<input class="hidden" type="file" #fileInput [accept]="accept()"
   (change)="onFileChange($event)"
 />
