--- a/projects/web/src/app/account/token-list/token-list.component.html
+++ b/projects/web/src/app/account/token-list/token-list.component.html
@@ -34,15 +34,15 @@
     (nzQueryParams)="loadData($event)">
     <thead>
     <tr class="sticky top-0 bg-gray-200 z-20">
-      <th scope="col" class="text-end">#</th>
-      <th scope="col" class="text-start">名称</th>
-      <th scope="col" class="text-center">凭证值</th>
-      <th scope="col" class="text-end">权限</th>
-      <th scope="col" class="text-end">代表的角色</th>
-      <th scope="col" class="text-end">允许的地址</th>
-      <th scope="col" class="text-center">更新时间</th>
-      <th scope="col" class="text-center">过期时间</th>
-      <th scope="col" class="text-center">操作</th>
+      <th scope="col" class="text-end!">#</th>
+      <th scope="col" class="text-start!">名称</th>
+      <th scope="col" class="text-center!">凭证值</th>
+      <th scope="col" class="text-end!">权限</th>
+      <th scope="col" class="text-end!">代表的角色</th>
+      <th scope="col" class="text-end!">允许的地址</th>
+      <th scope="col" class="text-center!">更新时间</th>
+      <th scope="col" class="text-center!">过期时间</th>
+      <th scope="col" class="text-center! table-action-col-3">操作</th>
     </tr>
     </thead>
     <tbody>
