--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -29,13 +29,13 @@
     (nzQueryParams)="loadData($event)">
     <thead>
       <tr class="sticky top-0 bg-gray-200 z-20">
-        <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
-        <th scope="col" class="text-start text-nowrap">标题</th>
-        <th scope="col" class="text-start text-nowrap">提示文字</th>
-        <th scope="col" class="text-start text-nowrap">图标</th>
-        <th scope="col" class="text-start text-nowrap">导航地址</th>
-        <th scope="col" class="text-center text-nowrap">顺序</th>
-        <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
+        <th scope="col" class="text-end! text-nowrap table-row-num-col">#</th>
+        <th scope="col" class="text-start! text-nowrap">标题</th>
+        <th scope="col" class="text-start! text-nowrap">提示文字</th>
+        <th scope="col" class="text-start! text-nowrap">图标</th>
+        <th scope="col" class="text-start! text-nowrap">导航地址</th>
+        <th scope="col" class="text-end! text-nowrap">顺序</th>
+        <th scope="col" class="text-center! text-nowrap table-action-col-3">操作</th>
       </tr>
     </thead>
     <tbody>
