--- a/projects/web/src/app/admin/organize-units/list/list.component.html
+++ b/projects/web/src/app/admin/organize-units/list/list.component.html
@@ -19,8 +19,8 @@
       <tr>
         <th>名称</th>
         <th>说明</th>
-        <th class="text-end">顺序</th>
-        <th class="table-action-col-3 text-center">操作</th>
+        <th class="text-end!">顺序</th>
+        <th class="table-action-col-3 text-center!">操作</th>
       </tr>
     </thead>
     <tbody>
