--- a/projects/web/src/app/admin/privileges/list/list.component.html
+++ b/projects/web/src/app/admin/privileges/list/list.component.html
@@ -40,12 +40,12 @@
     (nzQueryParams)="loadData($event)">
     <thead>
       <tr class="sticky top-0 bg-gray-200 z-20">
-        <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
-        <th scope="col" class="text-start text-nowrap">权限模块</th>
-        <th scope="col" class="text-start text-nowrap">权限名称</th>
-        <th scope="col" class="text-start text-nowrap">权限描述</th>
-        <th scope="col" class="text-center text-nowrap">是否必须</th>
-        <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
+        <th scope="col" class="text-end! text-nowrap table-row-num-col">#</th>
+        <th scope="col" class="text-start! text-nowrap">权限模块</th>
+        <th scope="col" class="text-start! text-nowrap">权限名称</th>
+        <th scope="col" class="text-start! text-nowrap">权限描述</th>
+        <th scope="col" class="text-center! text-nowrap">是否必须</th>
+        <th scope="col" class="text-center! text-nowrap table-action-col-3">操作</th>
       </tr>
     </thead>
     <tbody>
