--- a/projects/web/src/app/admin/roles/list/list.component.html
+++ b/projects/web/src/app/admin/roles/list/list.component.html
@@ -29,13 +29,13 @@
     (nzQueryParams)="loadData($event)">
     <thead>
       <tr class="sticky top-0 bg-gray-200 z-20">
-        <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
-        <th scope="col" class="text-start text-nowrap">名称</th>
-        <th scope="col" class="text-start text-nowrap">描述</th>
-        <th scope="col" class="text-center text-nowrap">是否默认</th>
-        <th scope="col" class="text-center text-nowrap">是否匿名</th>
-        <th scope="col" class="text-end text-nowrap">用户数</th>
-        <th scope="col" class="text-center text-nowrap table-action-col-4">操作</th>
+        <th scope="col" class="text-end! text-nowrap table-row-num-col">#</th>
+        <th scope="col" class="text-start! text-nowrap">名称</th>
+        <th scope="col" class="text-start! text-nowrap">描述</th>
+        <th scope="col" class="text-center! text-nowrap">是否默认</th>
+        <th scope="col" class="text-center! text-nowrap">是否匿名</th>
+        <th scope="col" class="text-end! text-nowrap">用户数</th>
+        <th scope="col" class="text-center! text-nowrap table-action-col-4">操作</th>
       </tr>
     </thead>
     <tbody>
