--- a/projects/web/src/app/admin/users/detail/detail.component.html
+++ b/projects/web/src/app/admin/users/detail/detail.component.html
@@ -6,11 +6,11 @@
       @if (user.privileges['app_users.update'] && params.editable) {
         <button type="button" nz-button nzType="primary"
           (click)="save()" [disabled]="!detailForm.valid">
-          <nz-icon class="me-1" nzType="check" /> 保存
+          <nz-icon nzType="check" /> 保存
         </button>
       }
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <nz-icon class="me-1" nzType="close" /> 取消
+        <nz-icon nzType="close" /> 取消
       </button>
     </nz-space-compact>
   </ng-template>
@@ -160,13 +160,13 @@
     @if (user.privileges['app_users.update'] && params.editable) {
       <button class="float-start ms-4!" type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <nz-icon class="me-1" nzType="check" /> 保存
+        <nz-icon nzType="check" /> 保存
       </button>
     }
   </ng-template>
   <ng-template #cancelTpl>
     <button class="float-end me-4!" type="button" nz-button nzType="default" (click)="cancel()">
-      <nz-icon class="me-1" nzType="close" /> 取消
+      <nz-icon nzType="close" /> 取消
     </button>
   </ng-template>
 </nz-card>
