--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -44,11 +44,11 @@
               @if (info.privileges['app_users.create']) {
                 <button type="button" nz-button nzType="primary"
                   (click)="showDetail('0', true)">
-                  <nz-icon class="me-1" nzType="plus" /> 新建用户
+                  <nz-icon nzType="plus" /> 新建用户
                 </button>
               }
               <button type="button" nz-button nzType="default" (click)="loadData({})">
-                <nz-icon class="me-1" nzType="sync" /> 刷新
+                <nz-icon nzType="sync" /> 刷新
               </button>
             </nz-space-compact>
           </nz-space>
@@ -69,14 +69,14 @@
         (nzQueryParams)="loadData($event)">
         <thead>
           <tr class="sticky top-0 bg-gray-200 z-20">
-            <th scope="col" class="text-end table-row-num-col">#</th>
-            <th scope="col" class="text-start">组织单元</th>
-            <th scope="col" class="text-start">用户名</th>
-            <th scope="col" class="text-center">电话</th>
-            <th scope="col" class="text-center">创建时间</th>
-            <th scope="col" class="text-center">最近登录</th>
-            <th scope="col" class="text-end">登录次数</th>
-            <th scope="col" class="text-center text-nowrap table-action-col-2">操作</th>
+            <th scope="col" class="text-end! table-row-num-col">#</th>
+            <th scope="col" class="text-start!">组织单元</th>
+            <th scope="col" class="text-start!">用户名</th>
+            <th scope="col" class="text-center!">电话</th>
+            <th scope="col" class="text-center!">创建时间</th>
+            <th scope="col" class="text-center!">最近登录</th>
+            <th scope="col" class="text-end!">登录次数</th>
+            <th scope="col" class="text-center! text-nowrap table-action-col-2">操作</th>
           </tr>
         </thead>
         <tbody>
@@ -102,14 +102,14 @@
             <td class="text-center">
               <nz-space-compact nzSize="small">
                 @if (info.privileges['app_users.read_by_id']) {
-                  <button class="px-1" type="button" nz-button
+                  <button type="button" nz-button
                     nz-tooltip="详情" nzTooltipPlacement="top"
                     (click)="showDetail(item.id, false)">
                     <nz-icon nzType="bi:info-square" />
                   </button>
                 }
                 @if (canViewGears()) {
-                  <button class="px-1" type="button" nz-button
+                  <button type="button" nz-button
                     nz-tooltip="更多操作" nzTooltipPlacement="top"
                     nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
                     <nz-icon nzType="bi:three-dots" />
