--- a/projects/web/src/app/common/json-data-upload/json-data-upload.component.html
+++ b/projects/web/src/app/common/json-data-upload/json-data-upload.component.html
@@ -5,7 +5,7 @@
      <nz-icon [class]="iconClass()" [nzType]="iconPath()" />
     {{buttonText()}}
   </button>
-  <input class="hidden" type="file" #fileInput [accept]="accept()"
+  <input class="hidden!" type="file" #fileInput [accept]="accept()"
     (change)="onFileChange($event)" />
 } @else {
   <span class="text-yellow-500">{{noPrivilegeText()}}</span>
